--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,10 @@
       href="https://fonts.googleapis.com/css2?family=Chivo:wght@300&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Chivo:ital,wght@1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
 
     <title>Patrick Schadler | Software Engineer</title>
   </head>
