--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Portfolio of Patrick Schadler | Senior Software Engineer"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -32,7 +32,10 @@
       href="https://fonts.googleapis.com/css2?family=Chivo:ital,wght@1,700;1,900&display=swap"
       rel="stylesheet"
     />
-
+    <script
+      src="https://kit.fontawesome.com/689a837a3a.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Patrick Schadler | Software Engineer</title>
   </head>
   <body>
